--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lillian",
-  "homepage": "https://clillianhong.github.io/",
+  "homepage": "http://honglillian.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
