--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "@craco/craco": "^6.2.0",
     "@material-ui/core": "^4.12.1",
     "@react-three/drei": "^7.3.1",
-    "@react-three/fiber": "^7.0.5",
+    "@react-three/fiber": "^7.0.29",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "babel-plugin-glsl": "^1.0.0",
     "lodash": "^4.17.21",
+    "node": "^23.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-pro-sidebar": "^0.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "three": "^0.130.1",
+    "react-unity-webgl": "^9.8.0",
+    "three": "^0.133.0",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "craco start",
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
     "autoprefixer": "^9.8.6",
     "gh-pages": "^3.2.3",
     "postcss": "^7.0.36",
