--- a/react/art-portfolio/package.json
+++ b/react/art-portfolio/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@tailwindcss/postcss": "^4.0.14",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -16,6 +18,7 @@
     "@types/react-dom": "^19.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "react-unity-webgl": "^9.8.0",
     "typescript": "^4.9.5",
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/material-ui": "^0.21.18",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.14"
