--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-unity-webgl": "^9.8.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -56,6 +56,5 @@
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.14"
-  },
-  "homepage": "https://clillianhong.github.io/react/clillianhong.github.io)"
+  }
 }
